Icon definition listwith min-height 40px per item

--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -303,7 +303,11 @@ header.mast {
         display:inline;
     }
 
-    dd { margin:0 0 2em 0; }
+    dd {
+        min-height:40px;
+        margin:0 0 2em 0;
+        padding-top:.75em;
+    }
 
 }
 
